2009-09-16  Marek Konopka  <konop11@poczta.onet.pl>
* players/dlt.as8: disabled MADS warnings


2009-09-15  Piotr Fusik  <fox@scene.pl>
* Makefile: changed variable references from braces to parentheses - to make
  it consistent with other Makefiles and get highlighting in SciTE

* CREDITS, Makefile, README, asap.c, asap.h, asap2wav.c, asap_internal.h,
  csharp/asap2wav.cs, gsplayer/gspasap.c, java/ASAP2WAV.java, players/dlt.as8,
  players/Makefile, win32/Makefile, win32/apollo/ASAP_Apollo.cpp,
  win32/dshow/asap_dsf.cpp, win32/foobar2000/foo_asap.cpp,
  win32/setup/asap.wxs, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  added DLT format


2009-09-14  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, csharp/ASAP.ppcs, java/ASAP_ModuleInfo.java:
  replaced character mnemonics with ASAP_TYPE_*

* players/Makefile, csharp/Makefile, gsplayer/Makefile, java/Makefile,
  win32/Makefile: created players/Makefile


2009-09-12  Piotr Fusik  <fox@scene.pl>
* configure.ac, INSTALL, Makefile.in, Makefile, win32/Makefile, xmms/libasap.c,
  xmms/libasap-xmms.c, xmms/libasap.map, xmms/libasap-xmms.map:
  dropped "configure"; added "install-lib";
  XMMS plugin renamed to libasap-xmms.*

* java/Makefile, win32/Makefile: made "make -j 2" work


2009-09-01  Piotr Fusik  <fox@scene.pl>
* CREDITS, Makefile.in, README, asap.c, asap2wav.c, csharp/Makefile,
  csharp/asap2wav.cs, gsplayer/Makefile, java/ASAP2WAV.java, java/Makefile,
  players/cmc.asx, win32/Makefile, win32/apollo/ASAP_Apollo.cpp,
  win32/dshow/asap_dsf.cpp, win32/foobar2000/foo_asap.cpp,
  win32/setup/asap.wxs, win32/wasap/wasap.c, win32/winamp/in_asap.c:
  added CM3 format

* README, win32/Makefile: fixed XHTML, added validation


2009-08-23  Piotr Fusik  <fox@scene.pl>
* README, CREDITS, win32/Makefile: generate web page from project documentation


2009-08-20  Piotr Fusik  <fox@scene.pl>
* asap.c: conversion from CMS to SAP now handles modules which start
  with zeros instead of 0xFFs

