@@ -1,3 +1,7 @@
+2009-09-16  Piotr Fusik  <fox@scene.pl>
+* asap.c: detect DLT subsongs and duration
+
+
 2009-09-16  Marek Konopka  <konop11@poczta.onet.pl>
 * players/dlt.as8: disabled MADS warnings
 
